@@ -10,7 +10,6 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.DeviceRotation;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebElement;
-import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.remote.RemoteWebElement;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.AfterMethod;
@@ -21,11 +20,9 @@ import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.time.Duration;
-import java.util.HashMap;
 
-public class BaseTest {
+public class BrowserBaseTest {
 
     AndroidDriver driver;
     AppiumDriverLocalService service;
@@ -46,46 +43,20 @@ public class BaseTest {
                 .usingPort(4723).build();
         service.start();
     }
-//    @BeforeMethod
-//    public void configureAppiumDriver() throws MalformedURLException, URISyntaxException {
-//
-//        // Set up the desired capabilities for the Android driver
-//        UiAutomator2Options options = new UiAutomator2Options();
-//        options.setDeviceName("AniketEmulator");
-//        options.setUiautomator2ServerLaunchTimeout(Duration.ofMillis(60000));
-//        options.setApp("C:\\Users\\LENOVO\\eclipse-workspace\\Appium\\src\\test\\java\\resources\\ApiDemos-debug.apk");
-//        //options.setApp("C:\\Users\\LENOVO\\eclipse-workspace\\Appium\\src\\test\\java\\resources\\General-Store.apk");
-//        driver = new AndroidDriver(new URI("http://127.0.0.1:4723").toURL(), options);
-//        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-//    }
+    @BeforeMethod
+    public void configureAppiumDriver() throws MalformedURLException, URISyntaxException {
 
-    // Below methods used to run testd on browserstack and above comment out methods used to run tests on local emulator (Android Studio)
+        // Set up the desired capabilities for the Android driver
+        UiAutomator2Options options = new UiAutomator2Options();
+        options.setDeviceName("AniketEmulator");
+        options.setUiautomator2ServerLaunchTimeout(Duration.ofMillis(60000));
+        // Add Chromedriver executable path
+        options.setChromedriverExecutable("C:\\Users\\LENOVO\\eclipse-workspace\\Appium\\src\\test\\java\\resources\\chromedriver.exe");
+        options.setCapability("browserName", "Chrome");
 
-@BeforeMethod
-public void configureAppiumDriver() throws MalformedURLException {
-    HashMap<String,Object> bstOptions = new HashMap<String,Object>();
-    bstOptions.put("userName", "aniketgapat_Sz8RPk");
-    bstOptions.put("accessKey", "514TvvmqLkxtwNPwzu4i");
-    bstOptions.put("appiumVersion", "2.4.1");
-
-    UiAutomator2Options options = new UiAutomator2Options();
-   // options.setCapability("browserstack.user", "aniketgapat_Sz8RPk");
-  // options.setCapability("browserstack.key", "514TvvmqLkxtwNPwzu4i");
-    options.setDeviceName("GooglePixel6");
-    options.setPlatformName("Android");
-    options.setPlatformVersion("12.0");
-    // Replace with your uploaded app id
-    options.setApp("bs://6958621c9cab87dfc3ff2bd30247acd8806fa7cc"); //general store app on BrowserStack
-    //options.setApp("bs://588e96d854f9de9aa78428a68ccd99ddb1e32adf"); //api demos app on BrowserStack
-    // BrowserStack credentials
-    options.setCapability("bstack:options", bstOptions);
-//    options.setCapability("project", "Your Project Name");
-//    options.setCapability("build", "Build 1.0");
-//    options.setCapability("name", "Sample Test");
-
-    driver = new AndroidDriver(new URL("https://hub.browserstack.com/wd/hub"), options);
-    driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-}
+        driver = new AndroidDriver(new URI("http://127.0.0.1:4723").toURL(), options);
+        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+    }
 
     @AfterMethod
     public void tearDown() {
